@@ -1,3 +1,8 @@
+2019-11-04  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92301
+	* gcc.dg/pr92301.c: New testcase.
+
 2019-11-03  Martin Sebor  <msebor@redhat.com>
 
 	PR c++/88565
